--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -14,16 +14,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.2.12",
-    "@angular/cdk": "16.2.12",
-    "@angular/common": "16.2.12",
-    "@angular/compiler": "16.2.12",
-    "@angular/core": "16.2.12",
-    "@angular/forms": "16.2.12",
-    "@angular/localize": "16.2.12",
-    "@angular/platform-browser": "16.2.12",
-    "@angular/platform-browser-dynamic": "16.2.12",
-    "@angular/router": "16.2.12",
+    "@angular/animations": "20.3.16",
+    "@angular/cdk": "20.2.14",
+    "@angular/common": "20.3.16",
+    "@angular/compiler": "20.3.16",
+    "@angular/core": "20.3.16",
+    "@angular/forms": "20.3.16",
+    "@angular/localize": "20.3.16",
+    "@angular/platform-browser": "20.3.16",
+    "@angular/platform-browser-dynamic": "20.3.16",
+    "@angular/router": "20.3.16",
+    "@ctrl/tinycolor": "^4.2.0",
     "@sentry/browser": "6.19.3",
     "@swimlane/ngx-charts": "20.5.0",
     "@types/d3": "7.1.0",
@@ -41,22 +42,22 @@
     "lodash-es": "4.17.21",
     "moment": "2.29.4",
     "monaco-editor": "0.33.0",
-    "ng-zorro-antd": "16.2.2",
+    "ng-zorro-antd": "20.4.4",
     "rxjs": "7.5.5",
-    "tslib": "2.3.0",
+    "tslib": "2.8.1",
     "yaml": "2.3.2",
-    "zone.js": "0.13.3"
+    "zone.js": "0.15.1"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "16.0.1",
-    "@angular-devkit/build-angular": "16.2.10",
-    "@angular/cli": "16.2.10",
-    "@angular/compiler-cli": "16.2.12",
-    "@angular/language-service": "16.2.12",
+    "@angular-builders/custom-webpack": "20.0.0",
+    "@angular-devkit/build-angular": "20.3.15",
+    "@angular/cli": "20.3.15",
+    "@angular/compiler-cli": "20.3.16",
+    "@angular/language-service": "20.3.16",
     "@types/jasmine": "4.0.1",
     "@types/jasminewd2": "2.0.10",
     "@types/lodash-es": "4.17.6",
-    "@types/node": "18.11.18",
+    "@types/node": "22.13.14",
     "codelyzer": "6.0.2",
     "eslint": "8.12.0",
     "jasmine-core": "4.0.1",
@@ -66,10 +67,10 @@
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.2",
     "karma-jasmine-html-reporter": "1.7.0",
-    "ng-packagr": "16.2.3",
+    "ng-packagr": "20.3.2",
     "protractor": "7.0.0",
     "ts-node": "10.7.0",
-    "typescript": "4.9.5",
+    "typescript": "5.8.3",
     "webpack-bundle-analyzer": "4.5.0"
   }
 }
