--- a/ui/dashboard/projects/utask-lib/package.json
+++ b/ui/dashboard/projects/utask-lib/package.json
@@ -2,17 +2,17 @@
     "name": "@ovhcloud/utask-lib",
     "version": "0.0.0",
     "peerDependencies": {
-        "@angular/animations": "^16.2.12",
-        "@angular/cdk": "^16.2.12",
-        "@angular/common": "^16.2.12",
-        "@angular/compiler": "^16.2.12",
-        "@angular/core": "^16.2.12",
-        "@angular/forms": "^16.2.12",
-        "@angular/localize": "^16.2.12",
-        "@angular/platform-browser": "^16.2.12",
-        "@angular/platform-browser-dynamic": "^16.2.12",
-        "@angular/router": "^16.2.12",
-        "@swimlane/ngx-charts": "^20.5.0",
+        "@angular/animations": "20.3.16",
+        "@angular/cdk": "20.2.14",
+        "@angular/common": "20.3.16",
+        "@angular/compiler": "20.3.16",
+        "@angular/core": "20.3.16",
+        "@angular/forms": "20.3.16",
+        "@angular/localize": "20.3.16",
+        "@angular/platform-browser": "20.3.16",
+        "@angular/platform-browser-dynamic": "20.3.16",
+        "@angular/router": "20.3.16",
+        "@swimlane/ngx-charts": "23.1.0",
         "convert-yaml": "^2.0.5",
         "dagre-compound": "^0.0.11",
         "jquery": "^3.6.0",
@@ -20,7 +20,7 @@
         "lodash-es": "^4.17.21",
         "moment": "^2.29.4",
         "monaco-editor": "^0.33.0",
-        "ng-zorro-antd": "^16.2.2",
+        "ng-zorro-antd": "20.4.4",
         "rxjs": "^7.5.5",
         "yaml": "^2.3.4"
     }
