--- a/vscode/web/package.json
+++ b/vscode/web/package.json
@@ -10,15 +10,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.18",
-    "@angular/common": "19.2.18",
-    "@angular/compiler": "19.2.18",
-    "@angular/core": "19.2.18",
-    "@angular/forms": "19.2.18",
-    "@angular/platform-browser": "19.2.18",
-    "@angular/platform-browser-dynamic": "19.2.18",
-    "@angular/router": "19.2.18",
-    "@ovhcloud/utask-lib": "1.31.0",
+    "@angular/animations": "20.3.16",
+    "@angular/common": "20.3.16",
+    "@angular/compiler": "20.3.16",
+    "@angular/core": "20.3.16",
+    "@angular/forms": "20.3.16",
+    "@angular/platform-browser": "20.3.16",
+    "@angular/platform-browser-dynamic": "20.3.16",
+    "@angular/router": "20.3.16",
+    "@ovhcloud/utask-lib": "file:/../../ui/dashboard/dist/utask-lib.tar.gz",
     "d3": "^7.4.4",
     "d3-drag": "^3.0.0",
     "d3-scale": "^4.0.2",
@@ -29,9 +29,9 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.2.19",
-    "@angular/cli": "19.2.19",
-    "@angular/compiler-cli": "19.2.18",
+    "@angular/build": "20.3.15",
+    "@angular/cli": "20.3.15",
+    "@angular/compiler-cli": "20.3.16",
     "@types/d3-scale": "^4.0.2",
     "@types/d3-selection": "^3.0.2",
     "@types/d3-shape": "^3.1.6",
@@ -40,11 +40,6 @@
     "@types/node": "^12.11.1",
     "@types/vscode-webview": "^1.57.0",
     "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~5.8.3"
   }
 }
